--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,10 @@ spring.datasource.url=jdbc:h2:mem:hoteldb
 spring.datasource.username=sa
 spring.datasource.password=
 
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
